[test] CarServiceDefaultImplTest 수정
- CarTrimSortedDTO의 중요한 특성인 정렬되어있는지 여부를 확인하기 위해, 각 리스트별 요소 추가

[issue] #30